# lost_sentry_2026

./: .gitignore  README.md
cpp_lidar_filter/: CMakeLists.txt  package.xml
cpp_lidar_filter/src/: filter_node.cpp
cpp_lidar_filter_pcd2/: CMakeLists.txt  package.xml
cpp_lidar_filter_pcd2/src/: filter_node.cpp
ego_planner/: CMakeLists.txt  README.md  package.xml
ego_planner/config/: ego_planner.yaml
ego_planner/include/: trajectory_obstacles_publisher.h
ego_planner/launch/: ego_planner.launch.py
ego_planner/planner/GridMap2D/: CMakeLists.txt
ego_planner/planner/GridMap2D/include/plan_env/: grid_map.h
ego_planner/planner/GridMap2D/src/: grid_map.cpp
ego_planner/planner/bspline_opt/: CMakeLists.txt
ego_planner/planner/bspline_opt/include/bspline_opt/: bspline_optimizer.h  gradient_descent_optimizer.h
ego_planner/planner/bspline_opt/src/: bspline_optimizer.cpp  uniform_bspline.cpp
ego_planner/planner/include/: Bspline.h
ego_planner/planner/matplotlib-cpp/: matplotlibcpp.h
ego_planner/planner/path_searching/: CMakeLists.txt
ego_planner/planner/path_searching/include/path_searching/: dyn_a_star.h
ego_planner/planner/path_searching/src/: dyn_a_star.cpp
ego_planner/planner/plan_manage/: CMakeLists.txt
ego_planner/planner/plan_manage/include/plan_manage/: plan_container.hpp  planner_interface.h
ego_planner/planner/plan_manage/src/: planner_interface.cpp
ego_planner/src/: trajectory_publisher.cpp
ego_planner_msgs/: CMakeLists.txt  package.xml
ego_planner_msgs/msg/: Trajectory.msg  TrajectoryPoint.msg
fake_vel_transform/: package.xml
fake_vel_transform/include/fake_vel_transform/: fake_vel_transform.hpp
fake_vel_transform/src/: fake_vel_transform.cpp
imu_complementary_filter/: CMakeLists.txt
imu_complementary_filter/config/: filter_config.yaml
imu_complementary_filter/launch/: complementary_filter.launch.py
imu_complementary_filter/src/: complementary_filter_ros.cpp
livox_laser_simulation_RO2/urdf/: mid360.xacro
livox_ros_driver2/launch/: rviz_MID360_launch.py
loam_interface/src/: loam_interface.cpp
mid360_deskew/: CMakeLists.txt  README.md  package.xml
mid360_deskew/config/: mid360_deskew.yaml  mid360_deskew_custom_imu_only.yaml  mid360_deskew_custom_odom.yaml  mid360_deskew_custom_odom_imu.yaml  mid360_deskew_imu_only.yaml  mid360_deskew_odom.yaml  mid360_deskew_odom_imu.yaml
mid360_deskew/docs/: code_review_audit.md  nav2_local_costmap_example.yaml  reference_comparison.md  test_plan.md
mid360_deskew/include/mid360_deskew/: delay_statistics.hpp  deskew_node.hpp  imu_buffer.hpp  pointcloud_field_helper.hpp  pose_buffer.hpp
mid360_deskew/launch/: mid360_deskew.launch.py
mid360_deskew/src/: deskew_node.cpp  imu_buffer.cpp  main.cpp  pointcloud_field_helper.cpp  pose_buffer.cpp
nav2_mppi_ego_controller/: CMakeLists.txt  README.md  critics.xml  mix_ego.md  mppic.xml  package.xml
nav2_mppi_ego_controller/benchmark/: CMakeLists.txt  controller_benchmark.cpp  optimizer_benchmark.cpp
nav2_mppi_ego_controller/docs/: ego_trajectory_critic_params_zh.md
nav2_mppi_ego_controller/include/nav2_mppi_ego_controller/: controller.hpp  critic_data.hpp  critic_function.hpp  critic_manager.hpp  motion_models.hpp  optimizer.hpp
nav2_mppi_ego_controller/src/: controller.cpp  critic_manager.cpp  noise_generator.cpp  optimizer.cpp  parameters_handler.cpp  path_handler.cpp  trajectory_visualizer.cpp
nav2_mppi_ego_controller/src/critics/: constraint_critic.cpp  cost_critic.cpp  ego_trajectory_critic.cpp  goal_angle_critic.cpp  goal_critic.cpp  obstacles_critic.cpp  path_align_critic.cpp  path_align_legacy_critic.cpp  path_angle_critic.cpp  path_follow_critic.cpp  prefer_forward_critic.cpp  twirling_critic.cpp  velocity_deadband_critic.cpp
nav2_mppi_ego_controller/test/: CMakeLists.txt  controller_state_transition_test.cpp  critic_manager_test.cpp  critics_tests.cpp  models_test.cpp  motion_model_tests.cpp  noise_generator_test.cpp  optimizer_smoke_test.cpp  optimizer_unit_tests.cpp  parameter_handler_test.cpp  path_handler_test.cpp  trajectory_visualizer_tests.cpp  utils_test.cpp
pb2025_nav_bringup/: package.xml
pb2025_nav_bringup/launch/: bringup_launch.py  localization_launch.py  navigation_launch.py  rm_navigation_reality_launch.py  rm_navigation_simulation_launch.py  robot_state_publisher_launch.py  slam_launch.py
pb2025_robot_description/: robot_description_launch.py
pb2025_robot_description/launch/: robot_description_launch.py
pb2025_robot_description/params/: robot_description.yaml
pb2025_robot_description/rviz/: visualize_robot.rviz
pb2025_sentry_nav/: package.xml
pb_omni_pid_pursuit_controller/src/: omni_pid_pursuit_controller.cpp
pc2_to_livox_custom/: CMakeLists.txt  package.xml
pc2_to_livox_custom/launch/: pc2_to_custom.launch.py
pc2_to_livox_custom/src/: pc2_to_custom_node.cpp
rm_decision_cpp/: CMakeLists.txt  README.md
rm_decision_cpp/behavior_tree/: new_1.xml  patrol.xml  patrol_test_1.xml  tree_nodes.xml
rm_decision_cpp/config/: node_params.yaml
rm_decision_cpp/launch/: run.launch.py
rm_decision_cpp/src/: tree_exec_node.cpp
rm_sentry_pp_nocrc_serial/: .gitignore  CMakeLists.txt  INTERFACE_REFERENCE.md  package.xml
rm_sentry_pp_nocrc_serial/config/: serial.yaml
rm_sentry_pp_nocrc_serial/docs/: MCU_IMPLEMENTATION_GUIDE.md
rm_sentry_pp_nocrc_serial/include/chiral/: chiral_endpoint.hpp  gimbal.hpp  navigation.hpp  shm_layout.hpp  shm_triple_buffer.hpp
rm_sentry_pp_nocrc_serial/include/rm_sentry_pp_nocrc_serial/: node.hpp  packet.hpp  serial_port.hpp
rm_sentry_pp_nocrc_serial/launch/: rm_sentry_pp_nocrc_serial.launch.py
rm_sentry_pp_nocrc_serial/src/: rm_sentry_pp_nocrc_serial_node.cpp  serial_port.cpp
sensor_scan_generation/src/: sensor_scan_generation.cpp
small_gicp_relocalization/src/: small_gicp_relocalization.cpp
small_point_lio/config/: mid360.yaml
small_point_lio/launch/: small_point_lio.launch.py
small_point_lio/src/: small_point_lio_node.cpp
velocity_smoother_ext/: CMakeLists.txt
velocity_smoother_ext/src/: velocity_smoother_ext.cpp
(+59 files in other folders)
