<?xml version="1.0"?>
<package format="3">
  <name>rm_sentry_pp_nocrc_serial</name>
  <version>0.0.1</version>
  <description>RM Sentry serial comm (no CRC) using pocket structs</description>

  <maintainer email="todo@todo.todo">todo</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rm_decision_interfaces</depend>
  <depend>armor_interfaces</depend>
  <depend>visualization_msgs</depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
